--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <h1>Crosstalk:</h1>
 
-    <p1 class="borderexample">Crosstalk, also known as Xiangsheng is a traditional performing art in
+    <p class="borderexample">Crosstalk, also known as Xiangsheng is a traditional performing art in
       Chinese comedy, and one of the most popular elements in Chinese culture.
       It is typically performed as a  dialogue between two performers, or rarely
       as a monologue by a solo performer  (similar to most forms of stand-up
       comedy in Western culture), or even less frequently, as a group act by
-      multiple performers.</p1>
+      multiple performers.</p>
       <br> <br>
 
       <h2 style="color:black;font-size:200%;">My favorite crosstalkers:<br> <p2 style="font-size:100%;color:darkgreen;">Zhang YunLei & Yang JiuLang</p2></h2>
